# Strategizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  toolbox.py
src/agents/: planner.py
src/tools/: modulo.py  power.py  product.py  quotient.py  square_root.py  subtraction.py  summation.py
