[project]
name = "strategizer"
version = "0.1.0"
description = "An app for financial analysis of companies using the data analysis functions."
authors = [
    {name = "Abdu Radi"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "langchain-openai (==0.3.3)",
    "langchain (>=0.3.21,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
